# siraj-os

./: .env  .gitignore  ARCHITECTURE_MAP_V1.txt  CHANGELOG.md  MANIFEST.in  PROJECT_INVENTORY.txt  PROJECT_PROGRESS.md  README.md  REVERSE_DEPENDENCY_MAP.txt  SirajOS Architecture Freeze v1.0  __phase1_rebuild.py  architecture_audit.ps1  architecture_report.txt  audit.txt  audit_legacy.ps1  audit_llm.ps1  debug_graphindex.py  dependency_graph.json  domain_dump.txt  knowledge_extractors_dump.txt  legacy_engine_dump.txt  migrate_provider_factory.py  patch-06.py  phase1_tasks.md  phase2_tasks.md  project_map.json  pyproject.toml  pytest.ini  runtime_error_1.txt  services_dependencies.txt  setup.py  sprint1.md  sprint2_sources_dump.txt  sprint3_dump.txt  test_source.txt
.devcontainer/: devcontainer.json
.siraj/: task.md
config/: archive_rules.json
dist-phase2-rcverify-20260716/: siraj_os-0.1.0rc1-py3-none-any.whl
dist-phase3-rcverify-20260716/: siraj_os-0.1.0rc1-py3-none-any.whl
dist-rcverify-20260716/: siraj_os-0.1.0rc1-py3-none-any.whl
dist-release-rc1-20260715/: siraj_os-0.1.0rc1-py3-none-any.whl
dist-release-rc1-20260715-final/: siraj_os-0.1.0rc1-py3-none-any.whl
dist-release-rc1-20260715-r2/: siraj_os-0.1.0rc1-py3-none-any.whl
docs/: AI_DEVELOPER_RULES.md  COMPATIBILITY_MATRIX.md  INSTALLATION_GUIDE.md  OPERATIONS_GUIDE.md  PROJECT_MANIFEST.md  ROADMAP.md  SIRAJ_ARCHITECT.md  SIRAJ_CONSTITUTION.md  SIRAJ_DEVELOPMENT_STATUS.md  SIRAJ_ENGINE_SPEC.md  SIRAJ_REASONING_PRINCIPLES.md
prompts/: current_prompt.md
reports/: FINAL_ARCHITECTURE_REPORT.txt  (+46 more)
(+1159 files in other folders)
