[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "siraj-os"
version = "0.1.0"
description = "Deterministic historical intelligence and documentary production system"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]

[project.scripts]
siraj = "src.application.cli_v2:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["src.tests*", "src.archive*"]
